--- a/AllerGen/places/places.html
+++ b/AllerGen/places/places.html
@@ -45,7 +45,7 @@
         </div>
         <div class="img-container">
           <img width="250px" src="../images/McDonalds.jpg" />
-          <a href="mcdonalds/mcdonald.html"><h1 class="name">McDonalds</h1></a>
+          <a href="mcdonalds/mcdonald.html"><h1 class="name">McDonald's</h1></a>
           <p class="description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
             numquam illo dignissimos id ducimus qui. Eligendi tempora illum sed
