--- a/AllerGen/saved/saved.html
+++ b/AllerGen/saved/saved.html
@@ -5,26 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AllerGen</title>
     <link rel="stylesheet" href="style1.css" />
+    <script src="../script.js" defer></script>
   </head>
   <body>
+    <div id="hamburger-menu">
+      <img width="50px" src="../images/hamburger.png" />
+    </div>
 
+    <div id="hamburger-submenu">
+      <ul>
+        <li><a href="places.html" class="list-element">Places</a></li>
+        <li><a href="#address" class="list-element">Address</a></li>
+        <li><a href="../index.html" class="list-element">Profile</a></li>
+      </ul>
+    </div>
+    
+    <section id="head">
+      <h1>Saved Restaurants</h1>
+      <h4> You have four saved-restaurants.</h4>
+    </section>
 
     <section id="saved-restaurants" class="section-p1">
       <div class="restaurants-box">
-            <img src="images/baratie.png" width="200" height="200">
-            <h6> Your Favorite Restaurant</h6>
+            <img src="../images/baratie.png" width="200" height="200">
+            <h6> Baratie</h6>
      </div>
      <div class="restaurants-box">
-      <img src="images/baratie.png" width="200" height="200">
-      <h6> Your Favorite Restaurant</h6>
+      <img src="../images/Olive_Garden-Logo.wine.png" width="200" height="200">
+      <h6> Olive Garden</h6>
 </div>
 <div class="restaurants-box">
-  <img src="images/baratie.png" width="200" height="200">
-  <h6> Your Favorite Restaurant</h6>
+  <img src="../images/Texas_Roadhouse-Logo.wine.png" width="200" height="200">
+  <h6> Texas Road House</h6>
 </div>
 <div class="restaurants-box">
-  <img src="images/baratie.png" width="200" height="200">
-  <h6> Your Favorite Restaurant</h6>
+  <img src="../images/cheese-factory-logo.png" width="200" height="200">
+  <h6> Cheese Cake Factory</h6>
 </div>
  </body>
 </html>
