--- a/AllerGen/index.html
+++ b/AllerGen/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AllerGen</title>
     <link rel="stylesheet" href="style.css" />
-
   </head>
   <body>
     <div id="hamburger-menu">
@@ -17,7 +16,6 @@
         <li><a href="places/places.html" class="list-element">Places</a></li>
         <li><a href="#address" class="list-element">Address</a></li>
         <li><a href="index.html" class="list-element">Profile</a></li>
-        <li><a href="#address" class="list-element">Address</a></li>
       </ul>
     </div>
 
@@ -27,7 +25,7 @@
       </div>
 
       <div class="profile-info">
-        <h1>Username</h1>
+        <h1>cowlover92</h1>
         <ul>
           <li><a href="#personal-info">Personal Information</a></li>
           <li><a href="saved/saved.html">Saved Restaurants</a></li>
@@ -37,21 +35,22 @@
       </div>
 
       <div class="saved-restaurants">
-        <div class="saved-retaurants-pic">
-          <img id="bookmarks" width="50px" src="images/bookmark-icon.png">
-      </div>
-      
-      <div class="allergy-specifics">
-        <div class="allergy-specifics-pic">
-          <img id="m-glass" width="50px" src="images/m-glass.png">
-      </div> 
-
-      <div class="notifications">
-        <div class = "notifications-pic">
-          <img id="bell" width="50px" src="images/bell-icon.png">
+        <div class="saved-restaurants-pic">
+          <img id="bookmarks" width="25px" src="images/bookmark-icon.png" />
         </div>
       </div>
-      
+
+      <div class="notifications">
+        <div class="notifications-pic">
+          <img id="bell" width="25px" src="images/bell-icon.png" />
+        </div>
+      </div>
+
+      <div class="settings">
+        <div class="settings-pic">
+          <img id="gear" width="25" src="images/settings.png" />
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
