final-ish draft

--- a/AllerGen/index.html
+++ b/AllerGen/index.html
@@ -21,7 +21,7 @@
 
     <div class="profile-container">
       <div class="profile-picture">
-        <img id="pfp" width="125px" src="images/user-icon.png" />
+        <img id="pfp" width="100px" src="images/cow-icon.png" />
       </div>
 
       <div class="profile-info">
@@ -49,6 +49,12 @@
       <div class="settings">
         <div class="settings-pic">
           <img id="gear" width="25" src="images/settings.png" />
+        </div>
+      </div>
+
+      <div class="personal">
+        <div class="personal-pic">
+          <img id="user" width="20" src="images/user-icon.png" />
         </div>
       </div>
     </div>
