--- a/AllerGen/places/baratie/index.html
+++ b/AllerGen/places/baratie/index.html
@@ -61,7 +61,11 @@
       </div>
       <div class="all menu-item soy wheat">
         <h2>Grilled Chicken Salad</h2>
-        <p>Fresh salad with grilled chicken.</p>
+        <p>Fresh salad with grilled chicken</p>
+      </div>
+      <div class="all menu-item fish soy wheat">
+        <h2>Fried King Crab</h2>
+        <p>Fresh from East Blue's ocean floor.</p>
       </div>
     </section>
   </body>
