--- a/AllerGen/places/places.html
+++ b/AllerGen/places/places.html
@@ -18,7 +18,7 @@
       </ul>
     </div>
     <div class="search-container">
-      <input type="text" placeholder="Mexican Food" />
+      <input type="text" placeholder="Search" />
       <img width="20px" src="../images/search-icon.png" />
     </div>
     <div class="places-supercontainer">
