--- a/AllerGen/saved/saved.html
+++ b/AllerGen/saved/saved.html
@@ -27,19 +27,19 @@
 
     <section id="saved-restaurants" class="section-p1">
       <div class="restaurants-box">
-            <img src="../images/baratie.png" width="200" height="200">
+            <img src="../images/baratie.png" width="200" height="150">
             <h6> Baratie</h6>
      </div>
      <div class="restaurants-box">
-      <img src="../images/Olive_Garden-Logo.wine.png" width="200" height="200">
+      <img src="../images/olive-garden-icon.png" width="200px" height="150px">
       <h6> Olive Garden</h6>
 </div>
 <div class="restaurants-box">
-  <img src="../images/Texas_Roadhouse-Logo.wine.png" width="200" height="200">
+  <img src="../images/texas-roadhouse-icon.png" width="200" height="150">
   <h6> Texas Road House</h6>
 </div>
 <div class="restaurants-box">
-  <img src="../images/cheese-factory-logo.png" width="200" height="200">
+  <img src="../images/cheesecake-factory-icon.png" width="200" height="150">
   <h6> Cheese Cake Factory</h6>
 </div>
  </body>
