--- a/places/places.html
+++ b/places/places.html
@@ -32,10 +32,7 @@
             ><h1 id="Baratie" class="name">Baratie</h1></a
           >
           <p class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-            numquam illo dignissimos id ducimus qui. Eligendi tempora illum sed
-            quibusdam quam, repellat at nisi quas nostrum numquam necessitatibus
-            delectus veniam.
+            Only the most magnificent traveling seafood restaurant in the world!
           </p>
         </div>
       </div>
@@ -46,12 +43,7 @@
         <div class="img-container">
           <img width="250px" src="../images/McDonalds.jpg" />
           <a href="mcdonalds/mcdonald.html"><h1 class="name">McDonald's</h1></a>
-          <p class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-            numquam illo dignissimos id ducimus qui. Eligendi tempora illum sed
-            quibusdam quam, repellat at nisi quas nostrum numquam necessitatibus
-            delectus veniam.
-          </p>
+          <p class="description">Regular ol' Mickey D's.</p>
         </div>
       </div>
       <div class="places-container x-margin">
@@ -61,12 +53,7 @@
         <div class="img-container">
           <img width="250px" src="../images/burger-king.jpg" />
           <a href="bk/index.html"><h1 class="name">Burger King</h1></a>
-          <p class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-            numquam illo dignissimos id ducimus qui. Eligendi tempora illum sed
-            quibusdam quam, repellat at nisi quas nostrum numquam necessitatibus
-            delectus veniam.
-          </p>
+          <p class="description">Burger restaurant or something.</p>
         </div>
       </div>
     </div>
